Agregado funcionalidad de cargar usuarios desde el punto de creargrupos hace falta decir cuales son seleccionados para un posterior for con el insert en php

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,9 @@ dependencies {
     //BCRYPT
     implementation 'org.mindrot:jbcrypt:0.4'
 
+
+    //emoji
+    implementation 'androidx.emoji:emoji-appcompat:1.0.0'
+    implementation 'androidx.emoji:emoji-bundled:1.0.0'
+
 }
