--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     implementation 'com.github.florent37:materialtextfield:1.0.7'
 
     //ticker textview
-    implementation 'com.tomer:fadingtextview:2.5'
+   // implementation 'com.tomer:fadingtextview:2.5'
 
     //Fancy Alert
     implementation 'com.geniusforapp.fancydialog:FancyDialog:0.1.4'
@@ -49,7 +49,7 @@ dependencies {
 
     //Dexter
     // Dexter runtime permissions
-    implementation 'com.karumi:dexter:4.2.0'
+    //implementation 'com.karumi:dexter:4.2.0'
 
     implementation('com.mikepenz:aboutlibraries:7.0.3')
     implementation("com.mikepenz:materialdrawer:7.0.0-rc08")
@@ -60,18 +60,20 @@ dependencies {
     implementation 'com.kaopiz:kprogresshud:1.1.0'
 
     //GMAIL PROGRESS
-    implementation 'com.github.yesidlazaro:GmailBackground:1.2.0'
+   // implementation 'com.github.yesidlazaro:GmailBackground:1.2.0'
 
 
     //BCRYPT
-    implementation 'org.mindrot:jbcrypt:0.4'
+    //implementation 'org.mindrot:jbcrypt:0.4'
 
 
     //emoji
-    implementation 'androidx.emoji:emoji-appcompat:1.0.0'
-    implementation 'androidx.emoji:emoji-bundled:1.0.0'
+    //implementation 'androidx.emoji:emoji-appcompat:1.0.0'
+    //implementation 'androidx.emoji:emoji-bundled:1.0.0'
 
     //compatibilidad emoji a utf
-    implementation 'org.apache.commons:commons-lang3:3.4'
+    //implementation 'org.apache.commons:commons-lang3:3.4'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.rockerhieu.emojicon:library:1.3.3'
 
 }
