--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,5 +75,6 @@ dependencies {
     //implementation 'org.apache.commons:commons-lang3:3.4'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.rockerhieu.emojicon:library:1.3.3'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 
 }
