--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     implementation 'com.github.florent37:materialtextfield:1.0.7'
 
     //ticker textview
-   // implementation 'com.tomer:fadingtextview:2.5'
+    // implementation 'com.tomer:fadingtextview:2.5'
 
     //Fancy Alert
     implementation 'com.geniusforapp.fancydialog:FancyDialog:0.1.4'
@@ -60,7 +60,7 @@ dependencies {
     implementation 'com.kaopiz:kprogresshud:1.1.0'
 
     //GMAIL PROGRESS
-   // implementation 'com.github.yesidlazaro:GmailBackground:1.2.0'
+    // implementation 'com.github.yesidlazaro:GmailBackground:1.2.0'
 
 
     //BCRYPT
@@ -74,7 +74,14 @@ dependencies {
     //compatibilidad emoji a utf
     //implementation 'org.apache.commons:commons-lang3:3.4'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'com.rockerhieu.emojicon:library:1.3.3'
+    // implementation 'com.rockerhieu.emojicon:library:1.3.3'
     implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    implementation 'hani.momanii.supernova_emoji_library:supernova-emoji-library:0.0.2'
+    implementation 'me.himanshusoni.chatmessageview:chat-message-view:1.0.3'
+
+
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+
 
 }
